package alertas;

import usuarios.Transeunte;

public interface Alerta {
    public void alertar(Transeunte transeunte);
}
