package extras;
public interface CalculadoraDistancia {
    public float calcularDistancia(Ubicacion inicio, Ubicacion destino);
}
