package extras;

public class DistanciaMatrixAPI implements CalculadoraDistancia{
    @Override
    public float calcularDistancia(Ubicacion inicio, Ubicacion destino) {
        return 0;
    }
}
