package extras;

public enum Sexo{
    FEMENINO,
    MASCULINO,
    OTRO
}
