package extras;

public class Ubicacion {
    private String latitud;
    private String longitud;
}
